--- a/papers/byType.html
+++ b/papers/byType.html
@@ -272,6 +272,8 @@
 
 
 
+	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwall.mp4"><i class="fa fa-film"></i></a>
+
 
 </section><a class="details" href="/papers/yan2020zoomwalls/"><!-- --></a></li>
 <li><section id="citation">
@@ -286,7 +288,11 @@
 	<br />
 
 
+	<a href="http://hcitang.org/papers/2020-ismar2020-feick-tangi.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
+
+
+	<a href="http://hcitang.org/papers/2020-ismar2020-feick-tangi.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/feick2020tangi/"><!-- --></a></li>
@@ -2072,6 +2078,10 @@
 
 
 
+	<a href="2020-uist2020wip-feick-vrqt.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://github.com/MartinFk/VRQuestionnaireToolkit"><i class="fa fa-sticky-note-o"></i></a>
 
 
 
