--- a/papers/index.html
+++ b/papers/index.html
@@ -133,6 +133,22 @@
 
 </section><a class="details" href="/papers/jones2020wsar/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/feick2020vrqt"><span id="feick2020vrqt">Martin Feick, Niko Kleer, Anthony Tang, and Antonio Krüger. (2020). <span style="text-decoration: underline">The Virtual Reality Questionnaire Toolkit</span>. In <i>AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019</i>.</span>
+
+(poster).</a><br />
+
+
+
+
+	<a href="2020-uist2020wip-feick-vrqt.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://github.com/MartinFk/VRQuestionnaireToolkit"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/feick2020vrqt/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/feick2020tangi"><span id="feick2020tangi">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <span style="text-decoration: underline">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</span>. In <i>ISMAR 2020: 2020 IEEE International Symposium on Mixed and Augmented Reality</i>.</span>
 
 (conference).</a><br />
@@ -144,7 +160,11 @@
 	<br />
 
 
+	<a href="http://hcitang.org/papers/2020-ismar2020-feick-tangi.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
+
+
+	<a href="http://hcitang.org/papers/2020-ismar2020-feick-tangi.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/feick2020tangi/"><!-- --></a></li>
@@ -159,6 +179,8 @@
 	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+
+	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwall.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/yan2020zoomwalls/"><!-- --></a></li>
@@ -239,17 +261,21 @@
 
 </section><a class="details" href="/papers/feick2020tangj/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/feick2020vrqt"><span id="feick2020vrqt">Martin Feick, Niko Kleer, Anthony Tang, and Antonio Krüger. (2020). <span style="text-decoration: underline">The Virtual Reality Questionnaire Toolkit</span>. In <i>AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019</i>.</span>
+    <a href="/papers/jones2020dt4wsar"><span id="jones2020dt4wsar">Brennan Jones, Anthony Tang, Carman Neustaedter, Alissa N. Antle, and Elgin-Skye McLaren. (2020). <span style="text-decoration: underline">Designing Technology for Shared Communication and Awareness in Wilderness Search and Rescue</span>. In <i>HCI Outdoors: Theory, Design, Methods and Applications. Human–Computer Interaction Series.</i>, D.S. McCrickard, M. Jones and T.L. Stelter (eds.). Springer, 175–194.</span>
 
-(poster).</a><br />
-
-
+(incollection).</a><br />
 
 
 
 
+	<a href="http://hcitang.org/papers/2020-hcio-jones-dt4wsar.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
-</section><a class="details" href="/papers/feick2020vrqt/"><!-- --></a></li></ol>
+
+	<a href="https://doi.org/10.1007/978-3-030-45289-6_9"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/jones2020dt4wsar/"><!-- --></a></li></ol>
 
 <h1><a name="2019"></a>2019</h1>
 <ol class="bibliography"><li><section id="citation">
