--- a/papers/jones2020dt4wsar/index.html
+++ b/papers/jones2020dt4wsar/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</title>
+		<title>Designing Technology for Shared Communication and Awareness in Wilderness Search and Rescue</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</h1>
+						<h1 style="margin: 0 0 0.5em 0">Designing Technology for Shared Communication and Awareness in Wilderness Search and Rescue</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="feick2020tangi">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <span style="text-decoration: underline">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</span>. In <i>ISMAR 2020: 2020 IEEE International Symposium on Mixed and Augmented Reality</i>.</span>
+<span id="jones2020dt4wsar">Brennan Jones, Anthony Tang, Carman Neustaedter, Alissa N. Antle, and Elgin-Skye McLaren. (2020). <span style="text-decoration: underline">Designing Technology for Shared Communication and Awareness in Wilderness Search and Rescue</span>. In <i>HCI Outdoors: Theory, Design, Methods and Applications. Human–Computer Interaction Series.</i>, D.S. McCrickard, M. Jones and T.L. Stelter (eds.). Springer, 175–194.</span>
 
 
-
-	<small>Acceptance: 28.8% - 87/302.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Exploring and manipulating complex virtual objects is challenging due to limitations of conventional controllers and free-hand interaction techniques. We present the TanGi toolkit which enables novices to rapidly build physical proxy objects using Composable Shape Primitives. TanGi also provides Manipulators allowing users to build objects including movable parts, making them suitable for rich object exploration and manipulation in VR. With a set of different use cases and applications we show the capabilities of the TanGi toolkit, and evaluate its use. In a study with 16 participants, we demonstrate that novices can quickly build physical proxy objects using the Composable Shape Primitives, and explore how different levels of object embodiment affect virtual object exploration. In a second study with 12 participants we evaluate TanGi’s Manipulators, and investigate the effectiveness of embodied interaction. Findings from this study show that TanGi’s proxies outperform traditional controllers, and were generally favored by participants.</p>
+<p style="margin: 0.5em 0 1em 0">Wilderness search and rescue (WSAR) is a carefully planned and organized team operation, requiring collaboration and information sharing between many volunteers who are spread out across various locations in the outdoors. Workers play a variety of roles, both on the ground and at a command post, and they need information and awareness specific to those roles. In our work, we are interested in understanding how this information is gathered and passed around, how it helps WSAR workers achieve their goals, and what challenges they face in sending and receiving information as well as in maintaining proper awareness. We conducted a study where we interviewed WSAR workers and observed a simulated search. Our findings reveal that WSAR workers face challenges in maintaining a shared mental model when radio and network connectivity are sparse. Our insights reveal opportunities for new communication modalities, such as (but not limited to) video communication, augmented reality, drones, and team-collaboration platforms to provide awareness and make communication and coordination easier remotely across various locations, but particularly between the field teams and Command workers. However, such technologies should also be designed to anticipate gaps in radio reception, and provide opportunities for workers to communicate asynchronously and see relevant ‘offline’ information in a context-dependent manner. We present design ideas that pursue some of these opportunities.</p>
 
 <!--
 
@@ -97,11 +95,11 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2020-ismar2020-feick-tangi.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-ismar2020-feick-tangi.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2020-hcio-jones-dt4wsar.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-hcio-jones-dt4wsar.pdf)</a><br/>
 
 
+	<a href="https://doi.org/10.1007/978-3-030-45289-6_9"><i class="fa fa-sticky-note-o"></i> URL (https://doi.org/10.1007/978-3-030-45289-6_9)</a><br/>
 
-	<a href="http://hcitang.org/papers/2020-ismar2020-feick-tangi.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2020-ismar2020-feick-tangi.mp4)</a><br/>
 
 
 </p>
@@ -109,15 +107,17 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2020tangi,<br />
-&nbsp;&nbsp;author = {Feick, Martin and Bateman, Scott and Tang, Anthony and Miede, André and Marquardt, Nicolai},<br />
-&nbsp;&nbsp;booktitle = {ISMAR 2020: 2020 IEEE International Symposium on Mixed and Augmented Reality},<br />
-&nbsp;&nbsp;title = {TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality},<br />
-&nbsp;&nbsp;type = {conference},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@incollection{jones2020dt4wsar,<br />
+&nbsp;&nbsp;author = {Jones, Brennan and Tang, Anthony and Neustaedter, Carman and Antle, Alissa N. and McLaren, Elgin-Skye},<br />
+&nbsp;&nbsp;title = {Designing Technology for Shared Communication and Awareness in Wilderness Search and Rescue},<br />
+&nbsp;&nbsp;booktitle = {HCI Outdoors: Theory, Design, Methods and Applications. Human–Computer Interaction Series.},<br />
+&nbsp;&nbsp;editor = {McCrickard, D.S. and Jones, M. and Stelter, T.L.},<br />
+&nbsp;&nbsp;publisher = {Springer},<br />
+&nbsp;&nbsp;url = {https://doi.org/10.1007/978-3-030-45289-6_9},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-hcio-jones-dt4wsar.pdf},<br />
 &nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;acceptance = {28.8% - 87/302},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-ismar2020-feick-tangi.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2020-ismar2020-feick-tangi.mp4}<br />
+&nbsp;&nbsp;pages = {175-194},<br />
+&nbsp;&nbsp;isbn = {978-3-030-45289-6}<br />
 }<br />
 </p>
 					</div>
