--- a/papers/yan2020zoomwalls/index.html
+++ b/papers/yan2020zoomwalls/index.html
@@ -99,6 +99,8 @@
 
 
 
+	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwall.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2020-uist2020-yan-zoomwall.mp4)</a><br/>
+
 
 </p>
 
@@ -111,7 +113,8 @@
 &nbsp;&nbsp;title = {ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds},<br />
 &nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2020-uist2020-yan-zoomwall.mp4}<br />
 }<br />
 </p>
 					</div>
