--- a/papers/feick2020vrqt/index.html
+++ b/papers/feick2020vrqt/index.html
@@ -95,6 +95,10 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href="2020-uist2020wip-feick-vrqt.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (2020-uist2020wip-feick-vrqt.pdf)</a><br/>
+
+
+	<a href="https://github.com/MartinFk/VRQuestionnaireToolkit"><i class="fa fa-sticky-note-o"></i> URL (https://github.com/MartinFk/VRQuestionnaireToolkit)</a><br/>
 
 
 
@@ -108,7 +112,9 @@
 &nbsp;&nbsp;booktitle = {AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019},<br />
 &nbsp;&nbsp;title = {The Virtual Reality Questionnaire Toolkit},<br />
 &nbsp;&nbsp;type = {poster},<br />
-&nbsp;&nbsp;year = {2020}<br />
+&nbsp;&nbsp;year = {2020},<br />
+&nbsp;&nbsp;url = {https://github.com/MartinFk/VRQuestionnaireToolkit},<br />
+&nbsp;&nbsp;pdfurl = {2020-uist2020wip-feick-vrqt.pdf}<br />
 }<br />
 </p>
 					</div>
