--- a/papers/byType.html
+++ b/papers/byType.html
@@ -2078,7 +2078,7 @@
 
 
 
-	<a href="2020-uist2020wip-feick-vrqt.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2020-uist2020wip-feick-vrqt.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://github.com/MartinFk/VRQuestionnaireToolkit"><i class="fa fa-sticky-note-o"></i></a>
