--- a/papers/feick2020vrqt/index.html
+++ b/papers/feick2020vrqt/index.html
@@ -95,7 +95,7 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="2020-uist2020wip-feick-vrqt.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (2020-uist2020wip-feick-vrqt.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2020-uist2020wip-feick-vrqt.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-uist2020wip-feick-vrqt.pdf)</a><br/>
 
 
 	<a href="https://github.com/MartinFk/VRQuestionnaireToolkit"><i class="fa fa-sticky-note-o"></i> URL (https://github.com/MartinFk/VRQuestionnaireToolkit)</a><br/>
@@ -114,7 +114,7 @@
 &nbsp;&nbsp;type = {poster},<br />
 &nbsp;&nbsp;year = {2020},<br />
 &nbsp;&nbsp;url = {https://github.com/MartinFk/VRQuestionnaireToolkit},<br />
-&nbsp;&nbsp;pdfurl = {2020-uist2020wip-feick-vrqt.pdf}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-uist2020wip-feick-vrqt.pdf}<br />
 }<br />
 </p>
 					</div>
