added sydney's tei paper

--- a/papers/index.html
+++ b/papers/index.html
@@ -115,6 +115,26 @@
 					<div id="content">
 						<!-- Content -->
 						
+<h1><a name="2021"></a>2021</h1>
+<ol class="bibliography"><li><section id="citation">
+    <a href="/papers/pratte2021empathy"><span id="pratte2021empathy">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2021). <span style="text-decoration: underline">Evoking Empathy: A Framework for Describing Empathy Tools</span>. In <i>TEI 2021: International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+
+(paper).</a><br />
+
+	<small>Acceptance: 29.9% - 30/134.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/pratte2021empathy/"><!-- --></a></li></ol>
+
 <h1><a name="2020"></a>2020</h1>
 <ol class="bibliography"><li><section id="citation">
     <a href="/papers/jones2020wsar"><span id="jones2020wsar">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2020). <span style="text-decoration: underline">Remote Communication in Wilderness Search and Rescue: Implications for the Design of Emergency Distributed-Collaboration Tools for Network-Sparse Environments</span>. <i>Proceedings of the ACM on Human-Computer Interaction</i> 4, GROUP, 10: <span style="text-decoration: none">28 pages</span>.</span>
