--- a/papers/byType.html
+++ b/papers/byType.html
@@ -73,6 +73,8 @@
 			<h3>Jump to...</h3>
 			
 			
+			<a href="#2021">2021</a>&nbsp;&nbsp;&nbsp;
+			
 			<a href="#2020">2020</a>&nbsp;&nbsp;&nbsp;
 			
 			<a href="#2019">2019</a>&nbsp;&nbsp;&nbsp;
