--- a/papers/index.html
+++ b/papers/index.html
@@ -73,6 +73,8 @@
 			<h3>Jump to...</h3>
 			
 			
+			<a href="#2021">2021</a>&nbsp;&nbsp;&nbsp;
+			
 			<a href="#2020">2020</a>&nbsp;&nbsp;&nbsp;
 			
 			<a href="#2019">2019</a>&nbsp;&nbsp;&nbsp;
@@ -117,6 +119,42 @@
 						
 <h1><a name="2021"></a>2021</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/feick2021illusions"><span id="feick2021illusions">Martin Feick, Niko Kleer, André Zenner, Anthony Tang, and Antonio Krüger. (2021). <span style="text-decoration: underline">Visuo-haptic Illusions for Linear Translation and Stretching using Physical Proxies in Virtual Reality</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(paper).</a><br />
+
+	<small>Acceptance: 26.3% - 749/2844.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/feick2021illusions/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/mahadevan2021hri"><span id="mahadevan2021hri">Karthik Mahadevan, Mauricio Sousa, Anthony Tang, and Tovi Grossman. (2021). <span style="text-decoration: underline">"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(paper).</a><br />
+
+	<small>Acceptance: 26.3% - 749/2844.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/mahadevan2021hri/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/pratte2021empathy"><span id="pratte2021empathy">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2021). <span style="text-decoration: underline">Evoking Empathy: A Framework for Describing Empathy Tools</span>. In <i>TEI 2021: International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
 (paper).</a><br />
