--- a/projects/mobile-device-interaction/index.html
+++ b/projects/mobile-device-interaction/index.html
@@ -212,6 +212,25 @@
 
 </section><a class="details" href="/papers/seyed2014exploring/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/weigel2013focus"><span id="weigel2013focus">Martin Weigel, Sebastian Boring, Nicolai Marquardt, Juergen Steimle, Saul Greenberg, and Anthony Tang. (2013). <span style="text-decoration: underline">From Focus to Context and Back: Combining Mobile Projectors and Stationary
+    Displays</span>. In <i>GRAND 2013: RNote Proceedings of the GRAND NCE 2013 Meeting</i>.</span>
+
+(inproceedings).</a><br />
+
+
+	<small>Notes: Honourable mention.</small>
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2013-grand2013-focus-to-context-and-back.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/weigel2013focus/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/weigel2013projectorkit"><span id="weigel2013projectorkit">Martin Weigel, Sebastian Boring, Jürgen Steimle, Nicolai Marquardt, Saul Greenberg, and Anthony Tang. (2013). <span style="text-decoration: underline">ProjectorKit: easing rapid prototyping of interactive applications for
     mobile projectors</span>. In <i>MobileHCI ’13: Proceedings of the 15th international conference on
     Human-computer interaction with mobile devices and services</i>, ACM, 247–250.</span>
@@ -236,24 +255,28 @@
 
 </section><a class="details" href="/papers/weigel2013projectorkit/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/weigel2013focus"><span id="weigel2013focus">Martin Weigel, Sebastian Boring, Nicolai Marquardt, Juergen Steimle, Saul Greenberg, and Anthony Tang. (2013). <span style="text-decoration: underline">From Focus to Context and Back: Combining Mobile Projectors and Stationary
-    Displays</span>. In <i>GRAND 2013: RNote Proceedings of the GRAND NCE 2013 Meeting</i>.</span>
+    <a href="/papers/chen2012extending"><span id="chen2012extending">Xiang ’Anthony’ Chen, Nicolai Marquardt, Anthony Tang, Sebastian Boring, and Saul Greenberg. (2012). <span style="text-decoration: underline">Extending a mobile device’s interaction space through body-centric interaction</span>. In <i>MobileHCI ’12: Proceedings of the 14th international conference on
+    Human-computer interaction with mobile devices and services</i>, ACM, 151–160.</span>
 
-(inproceedings).</a><br />
+(conference).</a><br />
 
+	<small>Acceptance: 25% - 54/212.</small>
 
-	<small>Notes: Honourable mention.</small>
 
 
 	<br />
 
 
-	<a href="http://hcitang.org/papers/2013-grand2013-focus-to-context-and-back.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2012-mobilehci2012-body-centric-interaction.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
+	<a href="http://vimeo.com/31172179"><i class="fa fa-film"></i></a>
 
-</section><a class="details" href="/papers/weigel2013focus/"><!-- --></a></li>
+
+	<a href="http://doi.acm.org/10.1145/2371574.2371599"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/chen2012extending/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/boring2012fat"><span id="boring2012fat">Sebastian Boring, David Ledo, Xiang ’Anthony’ Chen, Nicolai Marquardt, Anthony Tang, and Saul Greenberg. (2012). <span style="text-decoration: underline">The Fat Thumb: Using the Thumb’s Contact Size for Single-handed Mobile
     Interaction</span>. In <i>Proceedings of the 14th International Conference on Human-computer
@@ -297,41 +320,6 @@
 
 </section><a class="details" href="/papers/boring2012fatdemo/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/chen2012extending"><span id="chen2012extending">Xiang ’Anthony’ Chen, Nicolai Marquardt, Anthony Tang, Sebastian Boring, and Saul Greenberg. (2012). <span style="text-decoration: underline">Extending a mobile device’s interaction space through body-centric interaction</span>. In <i>MobileHCI ’12: Proceedings of the 14th international conference on
-    Human-computer interaction with mobile devices and services</i>, ACM, 151–160.</span>
-
-(conference).</a><br />
-
-	<small>Acceptance: 25% - 54/212.</small>
-
-
-
-	<br />
-
-
-	<a href="http://hcitang.org/papers/2012-mobilehci2012-body-centric-interaction.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-
-	<a href="http://vimeo.com/31172179"><i class="fa fa-film"></i></a>
-
-
-	<a href="http://doi.acm.org/10.1145/2371574.2371599"><i class="fa fa-external-link"></i></a>
-
-</section><a class="details" href="/papers/chen2012extending/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/miyaoku2007c"><span id="miyaoku2007c">Kento Miyaoku, Anthony Tang, and Sidney Fels. (2007). <span style="text-decoration: underline">C-Band: A Ring Tag System Using A Color Pattern Code</span>. <i>Information Processing Society of Japan Journal</i> 48, 3: <span style="text-decoration: none">1361–1371</span>.</span>
-
-(journal).</a><br />
-
-
-
-
-
-
-
-</section><a class="details" href="/papers/miyaoku2007c/"><!-- --></a></li>
-<li><section id="citation">
     <a href="/papers/miyaoku2007cband"><span id="miyaoku2007cband">Kento Miyaoku, Anthony Tang, and Sidney Fels. (2007). <span style="text-decoration: underline">C-band: a flexible ring tag system for camera-based user interface</span>. In <i>ICVR’07: Proceedings of the 2nd international conference on Virtual
     reality</i>, Springer-Verlag, 320–328.</span>
 
@@ -347,7 +335,19 @@
 
 	<a href="http://dx.doi.org/10.1007/978-3-540-73335-5_35"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/miyaoku2007cband/"><!-- --></a></li></ol>
+</section><a class="details" href="/papers/miyaoku2007cband/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/miyaoku2007c"><span id="miyaoku2007c">Kento Miyaoku, Anthony Tang, and Sidney Fels. (2007). <span style="text-decoration: underline">C-Band: A Ring Tag System Using A Color Pattern Code</span>. <i>Information Processing Society of Japan Journal</i> 48, 3: <span style="text-decoration: none">1361–1371</span>.</span>
+
+(journal).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/miyaoku2007c/"><!-- --></a></li></ol>
 
 
 
