added a few papers; update pc meetings formatting

--- a/papers/index.html
+++ b/papers/index.html
@@ -130,9 +130,11 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+
+	<a href="http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/feick2021illusions/"><!-- --></a></li>
@@ -148,9 +150,11 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+
+	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/mahadevan2021hri/"><!-- --></a></li>
@@ -166,7 +170,7 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
