--- a/papers/pratte2021empathy/index.html
+++ b/papers/pratte2021empathy/index.html
@@ -97,7 +97,7 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
+	<a href="http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf)</a><br/>
 
 
 
@@ -114,7 +114,7 @@
 &nbsp;&nbsp;type = {paper},<br />
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {29.9% - 30/134},<br />
-&nbsp;&nbsp;pdfurl = {}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf}<br />
 }<br />
 </p>
 					</div>
