--- a/papers/feick2021illusions/index.html
+++ b/papers/feick2021illusions/index.html
@@ -97,9 +97,11 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
+	<a href="http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.pdf)</a><br/>
 
 
+
+	<a href="http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4)</a><br/>
 
 
 </p>
@@ -114,7 +116,8 @@
 &nbsp;&nbsp;type = {paper},<br />
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {26.3% - 749/2844},<br />
-&nbsp;&nbsp;pdfurl = {}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4}<br />
 }<br />
 </p>
 					</div>
