added chi2021 whatsapp contributions

--- a/papers/byType.html
+++ b/papers/byType.html
@@ -1600,6 +1600,24 @@
 
 <h1><a name="Workshop"></a>Workshop</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/poretski2021whatsappworkshop"><span id="poretski2021whatsappworkshop">Lev Poretski, Taamannae Taabassum, and Anthony Tang. (2021). <span style="text-decoration: underline">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</span>. In <i>Opinions, Intentions, Freedom of Expression, ..., and Other Human Aspects of Misinformation Online - Workshop at CHI 2021</i>.</span>
+
+(workshop).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2021-chi2021workshop-whatsapp.pdf "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://events.kmi.open.ac.uk/misinformation/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href="http://hcitang.org/papers/2021-chi2021workshop-whatsapp-presentation.pdf"><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/poretski2021whatsappworkshop/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/jones2019remotecollabinsar"><span id="jones2019remotecollabinsar">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2019). <span style="text-decoration: underline">Drones for Remote Collaboration in Wilderness Search and Rescue</span>. In <i>iHDI - International workshop on Human-Drone Interaction - Workshop at CHI 2019</i>, 6 pages.</span>
 
 (workshop).</a><br />
@@ -2073,6 +2091,20 @@
 
 <h1><a name="Poster"></a>Poster</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/poretski2021whatsapplbw"><span id="poretski2021whatsapplbw">Lev Poretski, Taamannae Taabassum, and Anthony Tang. (2021). <span style="text-decoration: underline">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</span>. In <i>EA CHI ’21: Extended Abstracts of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(poster).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/poretski2021whatsapplbw/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/feick2020vrqt"><span id="feick2020vrqt">Martin Feick, Niko Kleer, Anthony Tang, and Antonio Krüger. (2020). <span style="text-decoration: underline">The Virtual Reality Questionnaire Toolkit</span>. In <i>AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019</i>.</span>
 
 (poster).</a><br />
