--- a/papers/index.html
+++ b/papers/index.html
@@ -119,6 +119,38 @@
 						
 <h1><a name="2021"></a>2021</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/poretski2021whatsappworkshop"><span id="poretski2021whatsappworkshop">Lev Poretski, Taamannae Taabassum, and Anthony Tang. (2021). <span style="text-decoration: underline">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</span>. In <i>Opinions, Intentions, Freedom of Expression, ..., and Other Human Aspects of Misinformation Online - Workshop at CHI 2021</i>.</span>
+
+(workshop).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2021-chi2021workshop-whatsapp.pdf "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://events.kmi.open.ac.uk/misinformation/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href="http://hcitang.org/papers/2021-chi2021workshop-whatsapp-presentation.pdf"><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/poretski2021whatsappworkshop/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/poretski2021whatsapplbw"><span id="poretski2021whatsapplbw">Lev Poretski, Taamannae Taabassum, and Anthony Tang. (2021). <span style="text-decoration: underline">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</span>. In <i>EA CHI ’21: Extended Abstracts of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(poster).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/poretski2021whatsapplbw/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/feick2021illusions"><span id="feick2021illusions">Martin Feick, Niko Kleer, André Zenner, Anthony Tang, and Antonio Krüger. (2021). <span style="text-decoration: underline">Visuo-haptic Illusions for Linear Translation and Stretching using Physical Proxies in Virtual Reality</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 (paper).</a><br />
@@ -145,6 +177,8 @@
 
 	<small>Acceptance: 26.3% - 749/2844.</small>
 
+
+	<small>Notes: Best Paper Nominee (top 5% of submissions).</small>
 
 
 	<br />
