--- a/papers/poretski2021whatsappworkshop/index.html
+++ b/papers/poretski2021whatsappworkshop/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</title>
+		<title>Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,21 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</h1>
+						<h1 style="margin: 0 0 0.5em 0">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="mahadevan2021hri">Karthik Mahadevan, Mauricio Sousa, Anthony Tang, and Tovi Grossman. (2021). <span style="text-decoration: underline">"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+<span id="poretski2021whatsappworkshop">Lev Poretski, Taamannae Taabassum, and Anthony Tang. (2021). <span style="text-decoration: underline">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</span>. In <i>Opinions, Intentions, Freedom of Expression, ..., and Other Human Aspects of Misinformation Online - Workshop at CHI 2021</i>.</span>
 
 
-	<small>Notes: Best Paper Nominee (top 5% of submissions).</small>
-
-
-	<small>Acceptance: 26.3% - 749/2844.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">In ad-hoc human-robot collaboration (HRC), humans and robots work on a task without pre-planning the robot’s actions prior to execution; instead, task allocation occurs in real-time. However, prior research has largely focused on task allocations that are pre-planned - there has not been a comprehensive exploration or evaluation of techniques where task allocation is adjusted in real-time. Inspired by HCI research on territoriality and proxemics, we propose a design space of novel task allocation techniques including both explicit techniques, where the user maintains agency, and implicit techniques, where the efficiency of automation can be leveraged. The techniques were implemented and evaluated using a tabletop HRC simulation in VR. A 16-participant study, which presented variations of a collaborative block stacking task, showed that implicit techniques enable efficient task completion and task parallelization, and should be augmented with explicit mechanisms to provide users with fine-grained control.</p>
+<p style="margin: 0.5em 0 1em 0">Each of the authors comes from an immigrant family, and we became fascinated with the challenge of how our multi-generational families managed conflicting information as it came in during the early days of the COVID-19 pandemic. While the flood of information has abated somewhat, there still remain some intergenerational differences and cross-cultural challenges when it comes to discussing and maintaining a family dialog about COVID-19 and handling it. We provide a brief outline of our personal positions on this matter, then outline a small pilot study where we conducted interviews with members of immigrant families to understand the matter. Our findings from that study suggest that individual’s motivations to discuss, share or verify information are complex, nuanced and most certainly influenced by the family’s culture.</p>
 
 <!--
 
@@ -99,11 +95,13 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2021-chi2021workshop-whatsapp.pdf "><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-chi2021workshop-whatsapp.pdf )</a><br/>
 
 
+	<a href="https://events.kmi.open.ac.uk/misinformation/"><i class="fa fa-sticky-note-o"></i> URL (https://events.kmi.open.ac.uk/misinformation/)</a><br/>
 
-	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4)</a><br/>
+
+	<a href="http://hcitang.org/papers/2021-chi2021workshop-whatsapp-presentation.pdf"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-chi2021workshop-whatsapp-presentation.pdf)</a><br/>
 
 
 </p>
@@ -111,16 +109,15 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mahadevan2021hri,<br />
-&nbsp;&nbsp;author = {Mahadevan, Karthik and Sousa, Mauricio and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;booktitle = {CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems},<br />
-&nbsp;&nbsp;title = {"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration},<br />
-&nbsp;&nbsp;type = {paper},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{poretski2021whatsappworkshop,<br />
+&nbsp;&nbsp;author = {Poretski, Lev and Taabassum, Taamannae and Tang, Anthony},<br />
+&nbsp;&nbsp;title = {Immigrant Families' Health-Related Information Behaviour on Instant Messaging Platforms},<br />
+&nbsp;&nbsp;booktitle = {Opinions, Intentions, Freedom of Expression, ..., and Other Human Aspects of Misinformation Online - Workshop at CHI 2021},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021workshop-whatsapp.pdf },<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021workshop-whatsapp-presentation.pdf},<br />
 &nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;acceptance = {26.3% - 749/2844},<br />
-&nbsp;&nbsp;notes = {Best Paper Nominee (top 5{\%} of submissions)},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4}<br />
+&nbsp;&nbsp;type = {workshop},<br />
+&nbsp;&nbsp;url = {https://events.kmi.open.ac.uk/misinformation/}<br />
 }<br />
 </p>
 					</div>
