--- a/papers/poretski2021whatsapplbw/index.html
+++ b/papers/poretski2021whatsapplbw/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</title>
+		<title>Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,21 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</h1>
+						<h1 style="margin: 0 0 0.5em 0">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="mahadevan2021hri">Karthik Mahadevan, Mauricio Sousa, Anthony Tang, and Tovi Grossman. (2021). <span style="text-decoration: underline">"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+<span id="poretski2021whatsapplbw">Lev Poretski, Taamannae Taabassum, and Anthony Tang. (2021). <span style="text-decoration: underline">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</span>. In <i>EA CHI ’21: Extended Abstracts of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 
-	<small>Notes: Best Paper Nominee (top 5% of submissions).</small>
-
-
-	<small>Acceptance: 26.3% - 749/2844.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">In ad-hoc human-robot collaboration (HRC), humans and robots work on a task without pre-planning the robot’s actions prior to execution; instead, task allocation occurs in real-time. However, prior research has largely focused on task allocations that are pre-planned - there has not been a comprehensive exploration or evaluation of techniques where task allocation is adjusted in real-time. Inspired by HCI research on territoriality and proxemics, we propose a design space of novel task allocation techniques including both explicit techniques, where the user maintains agency, and implicit techniques, where the efficiency of automation can be leveraged. The techniques were implemented and evaluated using a tabletop HRC simulation in VR. A 16-participant study, which presented variations of a collaborative block stacking task, showed that implicit techniques enable efficient task completion and task parallelization, and should be augmented with explicit mechanisms to provide users with fine-grained control.</p>
+<p style="margin: 0.5em 0 1em 0">For immigrant families, instant messaging family groups are a common platform for sharing and discussing health-related information. Immigrants often maintain contact with their family abroad and trust information in shared IM family groups more than the information from local authorities and sources. In this study, we aimed to understand health-related information behaviors of immigrant families in their IM family groups. Based on the interviews with 6 participants from immigrant families to Canada, we found that immigrant families’ discourse on IM platforms is motivated by love and care for other family members. The families used local and international sources of information, judged information credibility by its alignment with their pre-existing knowledge, and mostly did not verify information further. The information shared by different users from different sources often contradicted one another. Yet, family members did not discuss the conflicting information due to their desire to avoid tensions.</p>
 
 <!--
 
@@ -99,11 +95,9 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf)</a><br/>
 
 
-
-	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4)</a><br/>
 
 
 </p>
@@ -111,16 +105,13 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mahadevan2021hri,<br />
-&nbsp;&nbsp;author = {Mahadevan, Karthik and Sousa, Mauricio and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;booktitle = {CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems},<br />
-&nbsp;&nbsp;title = {"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration},<br />
-&nbsp;&nbsp;type = {paper},<br />
-&nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;acceptance = {26.3% - 749/2844},<br />
-&nbsp;&nbsp;notes = {Best Paper Nominee (top 5{\%} of submissions)},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{poretski2021whatsapplbw,<br />
+&nbsp;&nbsp;author = {Poretski, Lev and Taabassum, Taamannae and Tang, Anthony},<br />
+&nbsp;&nbsp;booktitle = {EA CHI '21: Extended Abstracts of the 2021 SIGCHI Conference on Human Factors in Computing Systems},<br />
+&nbsp;&nbsp;title = {Immigrant Families' Health-Related Information Behaviour on Instant Messaging Platforms},<br />
+&nbsp;&nbsp;type = {poster},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf},<br />
+&nbsp;&nbsp;year = {2021}<br />
 }<br />
 </p>
 					</div>
