add brennan's dissertation, update a few references

--- a/papers/byType.html
+++ b/papers/byType.html
@@ -274,7 +274,7 @@
 
 
 
-	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwall.mp4"><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/yan2020zoomwalls/"><!-- --></a></li>
@@ -2792,19 +2792,19 @@
 
 <h1><a name="Thesis"></a>Thesis</h1>
 <ol class="bibliography"><li><section id="citation">
-    <a href="/papers/cavalcanti2019thesis"><span id="cavalcanti2019thesis">Flavia Cavalcanti. (2019). <span style="text-decoration: underline">Flail: A Domain Specific Language for Drone Path Generation</span>. </span>
+    <a href="/papers/jones2021dissertation"><span id="jones2021dissertation">Brennan Jones. (2021). <span style="text-decoration: underline">Designing Remote Collaboration Technologies for Wilderness Search and Rescue</span>. </span>
 
 (thesis).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2019-mscthesis-cavalcanti.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+	<a href="https://prism.ucalgary.ca/handle/1880/113590"><i class="fa fa-sticky-note-o"></i></a>
 
 
 
-
-</section><a class="details" href="/papers/cavalcanti2019thesis/"><!-- --></a></li>
+</section><a class="details" href="/papers/jones2021dissertation/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/seyed2019dissertation"><span id="seyed2019dissertation">Teddy Seyed. (2019). <span style="text-decoration: underline">Entrepreneurial Thinking In The Design Of Ubiquitous Computing</span>. </span>
 
@@ -2819,6 +2819,20 @@
 
 
 </section><a class="details" href="/papers/seyed2019dissertation/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/cavalcanti2019thesis"><span id="cavalcanti2019thesis">Flavia Cavalcanti. (2019). <span style="text-decoration: underline">Flail: A Domain Specific Language for Drone Path Generation</span>. </span>
+
+(thesis).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2019-mscthesis-cavalcanti.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/cavalcanti2019thesis/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/dillman2018thesis"><span id="dillman2018thesis">Kody Dillman. (2018). <span style="text-decoration: underline">A Visual Interaction Cue Framework from Video Game Environments for Augmented Reality</span>. </span>
 
@@ -2848,6 +2862,20 @@
 
 </section><a class="details" href="/papers/feick2017thesis/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/alizadeh2016thesis"><span id="alizadeh2016thesis">Hesam Alizadeh Talarposhti. (2016). <span style="text-decoration: underline">HappyFeet: Embodiments for Joint Remote Dancing</span>. </span>
+
+(thesis).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2016-mscthesis-alizadeh.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/alizadeh2016thesis/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/jones2016thesis"><span id="jones2016thesis">Brennan Jones. (2016). <span style="text-decoration: underline">Elevating Communication, Collaboration, and Shared Experiences between Peers in Mobile Video Communication using Drones</span>. </span>
 
 (thesis).</a><br />
@@ -2861,20 +2889,6 @@
 
 
 </section><a class="details" href="/papers/jones2016thesis/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/graham2016thesis"><span id="graham2016thesis">Lisa Graham. (2016). <span style="text-decoration: underline">Help Me Help You: Shared Reflection for Personal Data</span>. </span>
-
-(thesis).</a><br />
-
-
-
-
-	<a href="http://hcitang.org/papers/2016-mscthesis-graham.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-
-
-</section><a class="details" href="/papers/graham2016thesis/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/fakourfar2016thesis"><span id="fakourfar2016thesis">Omid Fakourfar. (2016). <span style="text-decoration: underline">Stabilized Annotations for Mobile Remote Assistance</span>. </span>
 
@@ -2890,33 +2904,19 @@
 
 </section><a class="details" href="/papers/fakourfar2016thesis/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/alizadeh2016thesis"><span id="alizadeh2016thesis">Hesam Alizadeh Talarposhti. (2016). <span style="text-decoration: underline">HappyFeet: Embodiments for Joint Remote Dancing</span>. </span>
+    <a href="/papers/graham2016thesis"><span id="graham2016thesis">Lisa Graham. (2016). <span style="text-decoration: underline">Help Me Help You: Shared Reflection for Personal Data</span>. </span>
 
 (thesis).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2016-mscthesis-alizadeh.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2016-mscthesis-graham.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
 
-</section><a class="details" href="/papers/alizadeh2016thesis/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/rahman2016thesis"><span id="rahman2016thesis">S. M. Waliur Rahman. (2015). <span style="text-decoration: underline">Design and Evaluation of a Self-monitoring Application for Chronic Headaches</span>. </span>
-
-(thesis).</a><br />
-
-
-
-
-	<a href="http://hcitang.org/papers/2015-mscthesis-rahman.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-
-
-</section><a class="details" href="/papers/rahman2016thesis/"><!-- --></a></li>
+</section><a class="details" href="/papers/graham2016thesis/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/tang2015thesis"><span id="tang2015thesis">Richard Tang. (2015). <span style="text-decoration: underline">Physio at Home - Exploring Visual Guidance and Feedback
 Techniques for At-home Rehabilitation</span>. </span>
@@ -2932,6 +2932,20 @@ Techniques for At-home Rehabilitation</span>. </span>
 
 
 </section><a class="details" href="/papers/tang2015thesis/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/rahman2016thesis"><span id="rahman2016thesis">S. M. Waliur Rahman. (2015). <span style="text-decoration: underline">Design and Evaluation of a Self-monitoring Application for Chronic Headaches</span>. </span>
+
+(thesis).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2015-mscthesis-rahman.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/rahman2016thesis/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/aseniero2014thesis"><span id="aseniero2014thesis">Bon Adriel Aseniero. (2014). <span style="text-decoration: underline">STRATOS: The Design of Visualization to Support Decision-making in Software Release Planning</span>. </span>
 
