--- a/projects/mobile-device-interaction/index.html
+++ b/projects/mobile-device-interaction/index.html
@@ -320,6 +320,18 @@
 
 </section><a class="details" href="/papers/boring2012fatdemo/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/miyaoku2007c"><span id="miyaoku2007c">Kento Miyaoku, Anthony Tang, and Sidney Fels. (2007). <span style="text-decoration: underline">C-Band: A Ring Tag System Using A Color Pattern Code</span>. <i>Information Processing Society of Japan Journal</i> 48, 3: <span style="text-decoration: none">1361–1371</span>.</span>
+
+(journal).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/miyaoku2007c/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/miyaoku2007cband"><span id="miyaoku2007cband">Kento Miyaoku, Anthony Tang, and Sidney Fels. (2007). <span style="text-decoration: underline">C-band: a flexible ring tag system for camera-based user interface</span>. In <i>ICVR’07: Proceedings of the 2nd international conference on Virtual
     reality</i>, Springer-Verlag, 320–328.</span>
 
@@ -335,19 +347,7 @@
 
 	<a href="http://dx.doi.org/10.1007/978-3-540-73335-5_35"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/miyaoku2007cband/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/miyaoku2007c"><span id="miyaoku2007c">Kento Miyaoku, Anthony Tang, and Sidney Fels. (2007). <span style="text-decoration: underline">C-Band: A Ring Tag System Using A Color Pattern Code</span>. <i>Information Processing Society of Japan Journal</i> 48, 3: <span style="text-decoration: none">1361–1371</span>.</span>
-
-(journal).</a><br />
-
-
-
-
-
-
-
-</section><a class="details" href="/papers/miyaoku2007c/"><!-- --></a></li></ol>
+</section><a class="details" href="/papers/miyaoku2007cband/"><!-- --></a></li></ol>
 
 
 
