--- a/papers/index.html
+++ b/papers/index.html
@@ -119,6 +119,20 @@
 						
 <h1><a name="2021"></a>2021</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/jones2021dissertation"><span id="jones2021dissertation">Brennan Jones. (2021). <span style="text-decoration: underline">Designing Remote Collaboration Technologies for Wilderness Search and Rescue</span>. </span>
+
+(thesis).</a><br />
+
+
+
+
+
+	<a href="https://prism.ucalgary.ca/handle/1880/113590"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/jones2021dissertation/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/poretski2021whatsappworkshop"><span id="poretski2021whatsappworkshop">Lev Poretski, Taamannae Taabassum, and Anthony Tang. (2021). <span style="text-decoration: underline">Immigrant Families’ Health-Related Information Behaviour on Instant Messaging Platforms</span>. In <i>Opinions, Intentions, Freedom of Expression, ..., and Other Human Aspects of Misinformation Online - Workshop at CHI 2021</i>.</span>
 
 (workshop).</a><br />
@@ -276,7 +290,7 @@
 
 
 
-	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwall.mp4"><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/yan2020zoomwalls/"><!-- --></a></li>
