--- a/papers/jones2021dissertation/index.html
+++ b/papers/jones2021dissertation/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</title>
+		<title>Designing Remote Collaboration Technologies for Wilderness Search and Rescue</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</h1>
+						<h1 style="margin: 0 0 0.5em 0">Designing Remote Collaboration Technologies for Wilderness Search and Rescue</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="yan2020zoomwalls">Yan Yixian, Kazuki Takashima, Anthony Tang, Takayuki Tanno, Kazuyuki Fujita, and Yoshifumi Kitamura. (2020). <span style="text-decoration: underline">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</span>. In <i>UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+<span id="jones2021dissertation">Brennan Jones. (2021). <span style="text-decoration: underline">Designing Remote Collaboration Technologies for Wilderness Search and Rescue</span>. </span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">We focus on the problem of simulating the haptic infrastructure of a virtual environment (i.e. walls, doors). Our approach relies on multiple ZoomWalls—autonomous robotic encounter-type haptic wall-shaped props—that coordinate to provide haptic feedback for room-scale virtual reality. Based on a user’s movement through the physical space, ZoomWall props are coordinated through a predict-and-dispatch architecture to provide just-in-time haptic feedback for objects the user is about to touch. To refine our system, we conducted simulation studies of different prediction algorithms, which helped us to refine our algorithmic approach to realize the physical ZoomWall prototype. Finally, we evaluated our system through a user experience study, which showed that participants found that ZoomWalls increased their sense of presence in the VR environment. ZoomWalls represents an instance of <i>autonomous mobile reusable props</i>, which we view as an important design direction for haptics in VR.</p>
+<p style="margin: 0.5em 0 1em 0">Wilderness search and rescue (WSAR) is the search for and extraction of one or more lost people (e.g., hikers, skiers) from a wilderness area. WSAR is time-critical, and even with current technologies, workers still face challenges in effective remote collaboration, information sharing, and awareness. The overarching goal of this dissertation is to understand how user interfaces can be designed to better support WSAR distributed collaboration. I approach this first by understanding how WSAR workers collaborate remotely using today’s technologies. In the first phase of my research, I ran an investigative study in which I interviewed WSAR workers and observed a mock WSAR response. My findings demonstrate that the main goal of a system for WSAR distributed collaboration should be to help workers construct and maintain a shared mental model, but there are unique challenges to doing this when scattered and moving around the wilderness. Following this, I designed a prototype of a system for WSAR commanders. This system aims to provide commanders with more implicit awareness of events in the field and the experiences of field teams. It does this through (1) body cameras worn by field teams, streaming photos periodically to the command post; and (2) aggregating existing information channels together into one interface, allowing commanders to explore this information together as part of a bigger picture. I then evaluated this system through a remote user study. I found that the awareness provided by body-camera footage could give commanders additional confidence and comfort while reducing the need for explicit communications with field teams. However, it could also shift the burden of responsibility toward commanders. Overall, this work contributes the following: (1) an understanding of WSAR remote collaboration practices; (2) the design of an interface for providing commanders awareness of events in the field; (3) a method for studying WSAR user-interface technologies remotely through simulated scenarios; and (4) an understanding of the potential opportunities and challenges of new information streams and communication modalities in WSAR. Beyond WSAR, this work contributes more broadly to our understanding of how to design remote collaboration technologies for serious team-based activities in large outdoor environments.</p>
 
 <!--
 
@@ -95,11 +95,9 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf)</a><br/>
 
+	<a href="https://prism.ucalgary.ca/handle/1880/113590"><i class="fa fa-sticky-note-o"></i> URL (https://prism.ucalgary.ca/handle/1880/113590)</a><br/>
 
-
-	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.mp4)</a><br/>
 
 
 </p>
@@ -107,14 +105,14 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{yan2020zoomwalls,<br />
-&nbsp;&nbsp;author = {Yixian, Yan and Takashima, Kazuki and Tang, Anthony and Tanno, Takayuki and Fujita, Kazuyuki and Kitamura, Yoshifumi},<br />
-&nbsp;&nbsp;booktitle = {UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology},<br />
-&nbsp;&nbsp;title = {ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.mp4}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@phdthesis{jones2021dissertation,<br />
+&nbsp;&nbsp;author = {Jones, Brennan},<br />
+&nbsp;&nbsp;month = jul,<br />
+&nbsp;&nbsp;url = {https://prism.ucalgary.ca/handle/1880/113590},<br />
+&nbsp;&nbsp;school = {University of Calgary},<br />
+&nbsp;&nbsp;title = {Designing Remote Collaboration Technologies for Wilderness Search and Rescue},<br />
+&nbsp;&nbsp;type = {thesis},<br />
+&nbsp;&nbsp;year = {2021}<br />
 }<br />
 </p>
 					</div>
