--- a/papers/index.html
+++ b/papers/index.html
@@ -119,6 +119,36 @@
 						
 <h1><a name="2021"></a>2021</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/pratte2021empathy"><span id="pratte2021empathy">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2021). <span style="text-decoration: underline">Evoking Empathy: A Framework for Describing Empathy Tools</span>. In <i>TEI 2021: International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+
+(paper).</a><br />
+
+	<small>Acceptance: 29.9% - 30/134.</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/pratte2021empathy/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/li2021routetapestries"><span id="li2021routetapestries">Jiannan Li, Jiahe Lyu, Mauricio Sousa, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2021). <span style="text-decoration: underline">Route Tapestries: Navigating 360 Virtual Tour Videos Using Slit-Scan Visualizations</span>. In <i>UIST 2021: Proceedings of the 34th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+
+(paper).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/li2021routetapestries/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/jones2021dissertation"><span id="jones2021dissertation">Brennan Jones. (2021). <span style="text-decoration: underline">Designing Remote Collaboration Technologies for Wilderness Search and Rescue</span>. </span>
 
 (thesis).</a><br />
@@ -207,23 +237,17 @@
 
 </section><a class="details" href="/papers/mahadevan2021hri/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/pratte2021empathy"><span id="pratte2021empathy">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2021). <span style="text-decoration: underline">Evoking Empathy: A Framework for Describing Empathy Tools</span>. In <i>TEI 2021: International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+    <a href="/papers/kudo2021balancing"><span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. In <i>ISS 2021: Proceedings of the 2021 Interactional Conference on Interactive Surfaces and Spaces</i>.</span>
 
 (paper).</a><br />
 
-	<small>Acceptance: 29.9% - 30/134.</small>
-
-
-
-	<br />
-
-
-	<a href="http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
 
-</section><a class="details" href="/papers/pratte2021empathy/"><!-- --></a></li></ol>
+
+
+</section><a class="details" href="/papers/kudo2021balancing/"><!-- --></a></li></ol>
 
 <h1><a name="2020"></a>2020</h1>
 <ol class="bibliography"><li><section id="citation">
